<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_OpenGallery"
        android:title="@string/action_openGallery"
        app:showAsAction="never" />

    <item android:id="@+id/action_Hist"
        app:showAsAction="never"
        android:title="@string/action_Hist">
    </item>

    <item android:id="@+id/enhance_gs"
        android:title="@string/enhance_gs"
        android:enabled="true"
        android:visible="true"
        android:orderInCategory="102"
        app:showAsAction="always"
        android:titleCondensed="@string/enhance_gs_small">
        <menu>
            <item android:id="@+id/action_togs"
                android:title="@string/action_ctgs"/>
            <item android:id="@+id/action_egs"
                android:title="@string/action_eqgsistring"/>
        </menu>
    </item>
</menu>